kubernetes/apps/vpn-gateway/gateway/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pod-gateway
  labels:
    app.kubernetes.io/instance: &instance vpn-gateway
    app.kubernetes.io/name: &name pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: *instance
      app.kubernetes.io/name: *name
  egress:
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "8080"
              protocol: UDP
    - toEntities:
        - cluster
---
# vpn-gateway to communicate over the default VXLAN port 4789
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pod-gateway-vxlan
  labels:
    app.kubernetes.io/instance: &instance vpn-gateway
    app.kubernetes.io/name: &name pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: *instance
      app.kubernetes.io/name: *name
  egress:
    - toPorts:
        - ports:
            - port: "4789"
              protocol: UDP
  ingress:
    - toPorts:
        - ports:
            - port: "4789"
              protocol: UDP
    - icmps:
        - fields:
            - type: 8
              family: IPv4

---
# vpn-gateway-pod-gateway webhook receive traffic
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pod-gateway-webhook
  labels:
    app.kubernetes.io/instance: &instance vpn-gateway
    app.kubernetes.io/name: &name pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: *instance
      app.kubernetes.io/name: *name
  ingress:
    - toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
